--- a/public/style.css
+++ b/public/style.css
@@ -35,3 +35,20 @@ header p {
   color: #fff;
   font-size: 14px;
 }
+
+/* card */
+
+.card {
+  background: #fff;
+  border-radius: 5px;
+  box-shadow: 0px 0px 5px rgba(0,0,0,0.1);
+  padding: 20px;
+  margin-bottom: 20px;
+}
+
+.img-card {
+  width: 100%;
+  height: 200px;
+  background-size: cover;
+  background-position: center;
+}
