--- a/src/style.css
+++ b/src/style.css
@@ -47,6 +47,11 @@ header p {
   width: 471px;
   height: 168px;
   align-items: center;
+  font-size: 10.24px;
+}
+
+.card-title {
+  font-size: 25px;
 }
 
 .card img {
