--- a/src/style.css
+++ b/src/style.css
@@ -48,6 +48,10 @@ header p {
   height: 168px;
   align-items: center;
   font-size: 10.24px;
+  margin: 18px auto;
+  border-bottom: 1px solid #f5f5f5;
+  padding-bottom: 18px;
+  box-sizing: content-box;
 }
 
 .card-title {
@@ -72,12 +76,8 @@ header p {
   letter-spacing: 0.17em;
 }
 
-.card-container hr {
-  border: #F55A5A solid 0.5px;
-}
-
 .card:last-child {
-  border-bottom: hotpink solid 0.5px;
+  border-bottom: none;
 }
 
 .map-text-gray a{
