--- a/src/style.css
+++ b/src/style.css
@@ -30,14 +30,21 @@ a {
 header {
   background: #F55A5A;
   height: 55px;
-  display: flex;
+  display: flex;;
   align-items: center;
   justify-content: center;
+  gap: 6px;
 }
 
 header p {
   color: #fff;
   font-size: 14px;
+  letter-spacing: -0.020em;
+}
+
+.header-globe {
+  color: #fff;
+  font-size: 23px;
 }
 
 /* card */
@@ -56,6 +63,19 @@ header p {
 
 .card-title {
   font-size: 25px;
+  margin-bottom: 16px;
+  margin-top: 3px;
+  font-weight: bold;
+}
+
+.card-date {
+  font-weight: bold;
+  margin-bottom: 9px;
+
+}
+
+.card-description {
+  line-height: 15px;
 }
 
 .card img {
@@ -83,4 +103,8 @@ header p {
 .map-text-gray a{
   color: #918E9B;
   text-decoration-line: underline;
+}
+
+.card-container {
+  padding: 18px 0;
 }
